--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
+
 .navigation{
 display: flex;
 flex-direction: row;
 align-items: center;
-list-style-type: none;
 padding: 0px;
 gap: 40px;
 width: 496px;
@@ -18,6 +18,7 @@ Gap: 40px;
 .AHo{
 width: 53px;
 height: 25px;
+text-decoration: none;
 font-family: 'Open Sans';
 font-style: normal;
 font-weight: 400;
@@ -32,6 +33,7 @@ flex-grow: 0;
 .A2{
 width: 86px;
 height: 25px;
+text-decoration: none;
 font-family: 'Open Sans';
 font-style: normal;
 font-weight: 400;
@@ -46,6 +48,7 @@ flex-grow: 0;
 .SK2{
 width: 44px;
 height: 25px;
+text-decoration: none;
 font-family: 'Open Sans';
 font-style: normal;
 font-weight: 400;
@@ -60,6 +63,7 @@ flex-grow: 0;
 .Por3{
 width: 76px;
 height: 25px;
+text-decoration: none;
 font-family: 'Open Sans';
 font-style: normal;
 font-weight: 400;
@@ -75,6 +79,7 @@ flex-grow: 0;
 .Cont4{
 width: 77px;
 height: 25px;
+text-decoration: none;
 font-family: 'Open Sans';
 font-style: normal;
 font-weight: 400;
@@ -88,18 +93,31 @@ flex-grow: 0;
 }
    
 .photo{
-    width: 970px;
-    height: 387px;
-    top: 110px;
-    flex: none;
-order: 1;
-flex-grow: 0;  
+    display: flex;
+    padding: 10px;
+    border: 1px solid black;
+    align-items: start;
+    margin: 0px; 
   
 }
 .Vector{
-width: 970px;
-left: 235px;
+   
+    width: 970px;
+   
+    left: 235px;
+   
+    
 }
+.denisnov{
+    width: 300px;
+    height: 60px;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 65px;
+}
+    
 .about{
 width: 200px;
 height: 40px;
@@ -113,19 +131,19 @@ order: 1;
 flex-grow: 0;
 z-index: 1
 }
-.about2{
+.aboutpar{
     display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-padding: 0px;
-gap: 30px;
-width: 480px;
-height: 210px;
-flex: none;
-order: 2;
-flex-grow: 0;
-z-index: 2;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
+    gap: 30px;
+    width: 480px;
+    height: 210px;
+    flex: none;
+    order: 2;
+    flex-grow: 0;
+    z-index: 2;
 }
 .Skills{
 width: 120px;
@@ -141,7 +159,7 @@ flex: none;
 order: 0;
 flex-grow: 0;
 }
-.Skills1{
+.Skillspar{
 width: 250px;
 height: 24px;
 font-family: 'Open Sans';
@@ -156,12 +174,23 @@ order: 1;
 flex-grow: 0;
 }
 .pic{
-    display: flex;
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+padding: 0px;
+gap: 97px;
+width: 970px;
+height: 230px;
+flex: none;
+order: 1;
+flex-grow: 0;
 }
 .Ps{
 display: flex;
 flex-direction: column;
 align-items: center;
+float: left;
 padding: 0px;
 gap: 60px;
 width: 170px;
@@ -173,6 +202,7 @@ flex-grow: 0;
 .Ai{
 display: flex;
 flex-direction: column;
+float: left;
 align-items: center;
 padding: 0px;
 gap: 60px;
@@ -185,6 +215,7 @@ flex-grow: 0;
 .AF{
 display: flex;
 flex-direction: column;
+float: left;
 align-items: center;
 padding: 0px;
 gap: 60px;
@@ -299,7 +330,7 @@ flex: none;
 order: 0;
 flex-grow: 0;
 }
-.cont2{
+.Contactspa{
  width: 280px;
 height: 46px;
 font-family: 'Open Sans';
@@ -313,7 +344,7 @@ flex: none;
 order: 1;
 flex-grow: 0;
 }
-.BT2{
+.button{
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -345,28 +376,27 @@ flex-grow: 0;
 .linkedin{
 width: 40px;
 height: 40px;
-flex: none;
 order: 0;
 flex-grow: 0;
 }
 .instagram{
     width: 40px;
     height: 40px;
-    flex: none;
+    margin-left: 50px;
     order: 1;
     flex-grow: 0;   
 }
 .behance{
 width: 40px;
 height: 40px;
-flex: none;
+margin-left: 50px;
 order: 2;
 flex-grow: 0;
 }
 .dribbble{
 width: 40px;
 height: 40px;
-flex: none;
+margin-left: 50px;
 order: 3;
 flex-grow: 0;
 }
